[project]
name = "helmet-detector"
version = "0.1.0"
description = "Train and run helmet detection with Ultralytics YOLO/PyTorch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.2",
    "ultralytics>=8.3.0",
]

[project.scripts]
helmet-prepare-ndjson = "helmet_detector.cli:prepare_ndjson_main"
helmet-prepare-images = "helmet_detector.cli:prepare_images_main"
helmet-train = "helmet_detector.cli:train_main"
helmet-predict = "helmet_detector.cli:predict_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helmet_detector"]
